--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "CrazyAshu34.github.io/weather-react-app",
+  "homepage": "https://CrazyAshu34.github.io/weather-react-app",
   "name": "weather-react-app",
   "version": "0.1.0",
   "private": true,
